--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ db.sqlite3
 db.sqlite3-journal
 media
 static
-
+.idea
+.vscode
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
